--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^6.0.1",
+    "events": "^3.1.0",
+    "mouse-wheel": "^1.2.0",
+    "uuid": "^8.1.0"
   }
 }
