--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-prismic": "^1.0.7",
     "copy-webpack-plugin": "^6.0.1",
     "events": "^3.1.0",
+    "graphql": "^15.1.0",
+    "graphql-tag": "^2.10.3",
     "mouse-wheel": "^1.2.0",
     "uuid": "^8.1.0"
   }
