--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "events": "^3.1.0",
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
+    "in-viewport": "^3.6.0",
     "mouse-wheel": "^1.2.0",
     "uuid": "^8.1.0"
   }
